--- a/package.json
+++ b/package.json
@@ -3,24 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.3",
-    "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.3",
-    "swiper": "^11.2.10",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,10 +30,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3"
   }
 }
